fluxengine-local-test/src/test/dsl/junit/InternalTestProjectの移行/error/20190322/rule/AC4002MonthCostRule.dsl
test 1 monthCostEvent:
    2019/01/24 00:12:34:
        monthCostEvent:
            media: "YSS"
            accountId: 400201
            cost: 8000
        inspect:
            budgetState.currentState == "over":
